# codecs

./: CMakeLists.txt
cmake/: FindCodecs.cmake
include/base64/: libbase64.h
include/codecs/: codecs.h
include/msgpack/: msgpack.hpp
libs/base64/: codecs.h
src/: CMakeLists.txt  codecs.cpp  codecs.h
src/codecs/: codecs.cpp  codecs.h
